workshop03/warmup_exercise/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pythondemoapp-ingress
  namespace: default
spec:
  selector:
    istio: ingressgateway #controller
  servers:
  - hosts: 
    - demopythonapp.157.230.75.71.nip.io
    port:
      number: 80
      protocol: HTTP
      name: HTTP
