workshop03/warmup_exercise/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demopythonappvs1
  namespace: default
spec:
  hosts:
  - "demopythonapp.157.230.75.71.nip.io"
  gateways:
  - pythondemoapp-ingress
  http:
  - match:
    - uri:
        exact: /v1/hello
    rewrite:
      uri: /hello
    route:
    - destination:
        host: demopythonappsvc
        subset: version-1
  - match:
    - uri:
        exact: /v2/hello
    rewrite:
      uri: /hello
    route:
    - destination:
        host: demopythonappsvc
        subset: version-2
  - match:
    - uri:
        exact: /v3
    rewrite:
      uri: /topstories
    route:
    - destination:
        host: demopythonappsvc
        subset: version-3
